# SampleToNES

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  audioio.py  config.py  constants.py  frequencies.py  install.bat  install.sh  main.py  pyproject.toml  run.py  test.py  timer.py  utils.py
application/: __init__.py  constants.py  gui.py  utils.py
application/browser/: manager.py
application/config/: manager.py
application/elements/: button.py  panel.py  path.py  tree.py
application/instruction/: data.py  logic.py
application/panels/: browser.py  config.py  converter.py  library.py  player.py  reconstructor.py
application/player/: data.py  (+1 more)
audio/: __init__.py  manager.py  processing.py
browser/: config.py  constants.py  gui.py  instruction_handler.py  library.py  panel.py  utils.py
configs/: __init__.py  calculation.py  config.py  general.py  generation.py  library.py
constants/: __init__.py  application.py  browser.py  enums.py  general.py
exceptions/: library.py  playback.py
exporters/: __init__.py  exporter.py  maps.py  noise.py  pulse.py  square.py  triangle.py  typehints.py
ffts/: fft.py  library.py  transformations.py  window.py
generators/: __init__.py  criterion.py  generator.py  maps.py  noise.py  pulse.py  square.py  triangle.py  typehints.py  types.py  utils.py
instructions/: __init__.py  instruction.py  maps.py  noise.py  pulse.py  square.py  triangle.py  typehints.py
parallelization/: processor.py
reconstructor/: approximation.py  criterion.py  fragment.py  maps.py  reconstruction.py  reconstructor.py  scripts.py  state.py  worker.py
timers/: __init__.py  lfsr.py  phase.py  timer.py  utils.py
tree/: __init__.py  node.py  tree.py
typehints/: __init__.py  enums.py  exporters.py  feature.py  general.py  generators.py  instructions.py  timers.py  transformations.py
utils/: __init__.py  audioio.py  common.py  fami.py  frequencies.py  functions.py  logger.py  parallel.py  serialization.py
(+300 files in other folders)
