[project]
name = "sampletones"
version = "0.2.0"
description = "SampleToNES - Convert audio samples to FamiTracker instruments"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Jakim" }]

dependencies = [
    "anytree==2.13.0",
    "dearpygui==2.1.0",
    "librosa==0.11.0",
    "msgpack==1.1.2",
    "numpy==2.3.4",
    "pydantic==2.12.3",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "sounddevice==0.5.3",
    "tqdm==4.67.1",
]
